Fix stretched images

--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ cite {
     content: '‣ '
 }
 
+.wp-block-image img {
+    height: auto;
+}
+
 /*!
  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
